student and teacher
